[tool.poetry]
name = "<%= projectName %>"
version = "0.1.0"
description = "<%- projectDescription %>"
authors = [
    "<%= authorName %> <<%= authorEmail %>>",
]

[tool.poetry.dependencies]
python = "3.9.13"

[tool.poetry.dev-dependencies]
isort = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
black = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Packages configs

## black

[tool.black]
target-version = ['py39']

## pylint

[tool.pylint.messages_control]
disable = [
    # already managed by isort:
    "ungrouped-imports",
    "wrong-import-order",
    "wrong-import-position",
]

[tool.pylint.similarities]
ignore-signatures="yes"
ignore-imports="yes"

[tool.pylint.basic]
no-docstring-rgx = "^_|^test_|^Test[A-Z]" # no docstrings for tests

## isort

[tool.isort]
profile = "black"
multi_line_output = 3

## coverage

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
fail_under = 70.00
precision = 2
